--- a/pikku/public/theme.css
+++ b/pikku/public/theme.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Unifont';
+    src: url('/public/unifont.woff') format('woff'),
+         url('/public/unifont.ttf') format('truetype');
+}
+
+body {
+    font-family: 'Unifont', 'Arial', sans-serif;
+}
+
 .container {
     display: grid;
     grid-template-columns: 30% auto;
